# forgelib

./: CMakeLists.txt  MoveList.h  README.md
forge/core/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  BoardSquare.h  Color.h  Direction.h  FiftyMoveRule.cpp  FiftyMoveRule.h  GameState.cpp  GameState.h  HashCombine.h  IntBoard.cpp  IntBoard.h  Move.h  MoveCounter.h  MoveGenerator2.cpp  MoveGenerator2.h  MoveGenerator2_Definitions.h  MoveList.cpp  MoveList.h  MovePositionPair.cpp  MovePositionPair.h  Movers.h  Node.cpp  Node.h  Piece.h  Position.cpp  Position.h  game_history.cpp  game_history.h
forge/feature_extractor/: AttackChecker.cpp  Attackers.cpp  Attackers.h  KingAttacker.cpp  KingAttacker.h  KingAttackers.cpp  KingAttackers.h  Threats.cpp
forge/time/: clock.cpp  clock.h  stopwatch.cpp  timer.cpp  timer.h
